# TestCMake

./: .gitignore  CMakeLists.txt  CMakePresets.ubuntu  CMakePresets.windows  run.bat  run.sh
Doc/: CMakePresets.ubu-simple  Command_Build.txt  cmake-crossplatform.md  cmake_gpu_support.md  coding-workflow.md  fix-issues.md  ~Command_Build.txt
Doc/CMake/: CMakeLists.txt  CMakePresets.txt_json  CMakePresets.win-simple  CMakePresets_old01.json  build.bat  build.sh  cmake-config-system.md  cmake-masterclass.md  cmake-universal.md  git_command.txt  run.bat  run.sh  start-bat-guide.md  start.bat-fixed  your-config-analysis.md  ~Command_Build.txt
Doc/VScode/: launch.json-new  tasks.json-new
Doc/VScode/vscode_old/: c_cpp_properties.json  settings.json
include/: mylib.h
src/: main.cpp
